--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,7 +10,7 @@
 # General
 --------------------------------------------------------------*/
 body {
-  font-family: "Open Sans", sans-serif;
+  font-family: "Amazon Ember", sans-serif;
   color: #272829;
 }
 
@@ -31,6 +31,11 @@ h4,
 h5,
 h6 {
   font-family: "Raleway", sans-serif;
+}
+
+@font-face {
+  font-family: "Amazon Ember Regular";
+  src: url("../fonts/Amazon-Ember-Regular.ttf");
 }
 
 /*--------------------------------------------------------------
